# data-extraction-evaluation-toolkit

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml  version-preview.yml
deet/: exceptions.py
deet/data_models/: eppi.py  processed_gold_standard_annotations.py
deet/evaluators/: gold_standard_llm_evaluator.py
deet/processors/: eppi_annotation_converter.py  linker.py
deet/utils/: identifier_utils.py
tests/unit/: test_gold_standard_llm_evaluator.py  test_linker.py
