[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80.0.0", "wheel>=0.45.0"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest-cov>=6.2.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
docs = [
    "griffe-pydantic>=1.3.1",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-material>=9.7.0",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs>=1.6.1,<2.0",
    "mkdocstrings-python>=1.19.0",
    "mkdocstrings>=0.30.1",
]

[project]
authors = [
    {email = "h.moss@ucl.ac.uk", name = "Harry Moss"},
    {email = "max.callaghan@pik-potsdam.de", name = "Max Callaghan"},
    {email = "n.loynes@ucl.ac.uk", name = "Nik Loynes"},
    {email = "s.uprety@ucl.ac.uk", name = "Sagar Uprety"},
]
dependencies = [
    "destiny-sdk[labs]>=0.9.1",
    "diskcache>=5.6.3",
    "litellm>=1.77.4",
    "loguru>=0.7.3",
    "marker-pdf>=1.9.1",
    "nltk>=3.9.1",
    "openai>=1.0.0",
    "pdfminer.six>=20221105",
    "pillow>=10.4.0",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "pypandoc>=1.15",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.9.0",
    "scikit-learn>=1.7.1",
    "tabulate>=0.9.0",
    "typer>=0.21.2",
]
description = "Data Extraction Evaluation Toolkit (DEET): A suite of tools, data models, etc. for extracting data from documents (e.g. papers) and evaluating the performance of such extraction tasks"
name = "data-extraction-evaluation-toolkit"
readme = "README.md"
requires-python = ">=3.12.11"
version = "0.2.0"

[project.scripts]
deet = "deet.scripts.cli:main"

[tool.coverage.report]
# This section is optional but good practice
fail_under = 80
show_missing = true

[tool.coverage.run]
omit = [
    "deet/utils/destiny_utils.py",
]
source = ["deet"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pypandoc.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "marker.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "nltk.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "diskcache.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pdfminer.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "loguru.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "tabulate.*"

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "--verbose"]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["deet/migrations/versions/*.py", "docs/*.py"]
fix = true
force-exclude = true
line-length = 88
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
ignore = [
    "ANN003", # kwargs type annotation required
    "ARG002", # kwargs unused
    "COM812", # trailing commas (ruff-format recommended)
    "D104", # module docstring
    "D203", # no-blank-line-before-class
    "D205", # missing-blank-line-after-summary
    "D212", # multi-line-summary-first-line
    "D403", # forcing upper-case
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "ERA001", # allow commented code -- FOR NOW!
    "FIX002", # implicit trust that TODOs are not trivial, or else they would be fixed
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
    "RUF012", # where ruff wants type annotations using ClassVar for subclasses - mypy doesnt care, so why would we?
    "TD002", # name for TO DO
    "TD003", # pedantic issue number requester in to dos
]
per-file-ignores = {"deet/processors/parser.py" = ["PLC0415"], "deet/utils/assess_text_quality.py" = ["PLC0415"], "tests*" = ["ANN001", "ANN201", "ANN202", "ARG001", "D100", "D103", "INP001", "PLR0913", "PLR2004", "S101", "SLF001"]}
select = ["ALL"]
mccabe.max-complexity = 18
pep8-naming.classmethod-decorators = ["classmethod"]

[tool.setuptools]
package-data = {"deet.prompts" = ["*.txt"]}
package-dir = {"" = "."}
packages = {find = {exclude = ["test_env*", "tests*"]}}

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
